Fix css item no-wrap issue

--- a/dev/scss/myaddonsmore.scss
+++ b/dev/scss/myaddonsmore.scss
@@ -40,10 +40,6 @@
   font-family: sans-serif;
 }
 
-#customeremail {
-  white-space: nowrap;
-}
-
 .closed {
   font-weight: 400;
   color: red;
